# verify

./: .gitignore  README.md  README.zh-CN.md  biome.json  package.json  prompt.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: dashboard.rs  history.rs  mod.rs  settings.rs  verify.rs
src-tauri/src/domain/: batch.rs  catch_all.rs  dns.rs  mod.rs  rate_limiter.rs  smtp.rs  types.rs  verify.rs
src-tauri/src/infra/: csv_export.rs  db.rs  mod.rs
src/app/: AppSidebar.tsx  RootLayout.tsx  routeTitles.ts  router.tsx
src/features/batch-verify/: index.ts
src/features/batch-verify/api/: verifyBatchEmails.ts
src/features/batch-verify/components/: BatchInputPanel.tsx  BatchProgressBar.tsx  BatchResultsTable.tsx  BatchSummaryCards.tsx  BatchVerifyPage.tsx  VerdictBadge.tsx
src/features/batch-verify/store/: batchStore.ts
src/features/dashboard/: index.ts
src/features/dashboard/api/: getDashboardStats.ts
src/features/history/: index.ts
src/features/history/api/: fetchHistory.ts
src/features/settings/: index.ts
src/features/single-verify/: index.ts
src/shared/components/: resizable-table.tsx  verify-result-detail-sheet.tsx  verify-results-table.tsx
src/shared/hooks/: use-app-update.ts  use-resizable-columns.ts
src/shared/lib/: tauri.ts  update-toast.ts
src/shared/store/: updateStore.ts
src/shared/types/: verify-result.ts
(+42 files in other folders)
