[package]
name = "verify"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "verify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["full"] }
hickory-resolver = "0.26.1"
uuid = { version = "1.24.0", features = ["v7", "serde"] }
csv = "1.4.0"
chrono = { version = "0.4.45", features = ["serde"] }
tauri-plugin-store = "2.4.4"
tauri-plugin-dialog = "2.7.2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-log = "2.9.0"
tauri-plugin-clipboard-manager = "2.3.2"
tokio-util = "0.7.18"
async-trait = "0.1.91"
futures = "0.3.33"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
log = "0.4.33"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

